all.yaml

apiVersion: gateway.solo.io/v1
kind: VirtualService
metadata:
  name: extauth-retry
  namespace: gloo-system
spec:
  virtualHost:
    domains:
    - '*'
    routes:
    - matchers:
      - prefix: /
      routeAction:
        single:
          upstream:
            name: extauth-503
            namespace: gloo-system
      options:
        retries:
          numRetries: 3
          perTryTimeout: 10s
          retryOn: 5xx,cancelled,reset,unavailable,gateway-error,connect-failure

---

apiVersion: gateway.solo.io/v1
kind: Gateway
metadata:
  name: gateway-extauth-retry
  namespace: gloo-system
spec:
  bindAddress: '::'
  bindPort: 9000
  httpGateway: 
    virtualServices:
    - name: extauth-retry
      namespace: gloo-system
  proxyNames:
  - gateway-proxy
  useProxyProto: false


---

apiVersion: gateway.solo.io/v1
kind: VirtualService
metadata:
  name: demo
  namespace: gloo-system
spec:
  virtualHost:
    options:
      extauth:
        customAuth: {}  
    domains:
    - '*'
    routes:
    - matchers:
      - prefix: /
      routeAction:
        single:
          upstream:
            name: echo
            namespace: gloo-system

---

apiVersion: gateway.solo.io/v1
kind: Gateway
metadata:
  name: gateway-proxy
  namespace: gloo-system
spec:
  bindPort: 8080
  httpGateway: 
    virtualServices:
    - name: demo
      namespace: gloo-system
  bindAddress: '::'
  proxyNames:
  - gateway-proxy
  useProxyProto: false
